# core

./: .gitignore  .gitmodules  CMakeLists.txt  Core.cpp  ExecDomain.h  Heap.cpp  Heap.h  HeapDirectory.cpp  HeapDirectory.h  List.h  Memory.cpp  PriorityQueue.cpp  PriorityQueue.h  ProtDomain.cpp  ProtDomain.h  SyncDomain.cpp  SyncDomain.h  SyncDomainMemory.cpp  SyncDomainMemory.h  config.h  core.h  esiop.cpp  messages.cpp  messages.h  plan.txt  readme.md  real_copy.cpp  real_copy.h
DecCalc/: DecCalcImpl.cpp  pch.h
DriverManager/: DriverManager.cpp
Exports/: Launcher.cpp  Legacy.cpp  Memory_impl.cpp  ORB_p.cpp  PortableServer_p_native.h  System.cpp  exports.cpp  g_ORB.cpp  g_factory.cpp  g_legacy_system.cpp  g_memory.cpp  g_object_factory.cpp  g_system.cpp  memory.cpp  native.cpp  object_factory.cpp  orb.cpp  pch.h  system.cpp  tc_constants.cpp  tc_exceptions.cpp
IDL/: CMakeLists.txt  CoreDomains.idl
Include/: CallWrapper.h  HeapFactory.h  Memory.h  cpplib.h
Installer/: InstallerImpl.cpp  Stream.h  pch.h
Interface/: HeapFactory.h  Memory.h  Runnable.h  Scheduler.h
InterfaceRepository/: pch.h
Mock/: MockMemory.cpp  MockMemory.h  MockScheduler.cpp  MockScheduler.h
Objects/: g_memory.cpp  g_runtime_support.cpp  main.cpp
PacMan/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionPool.cpp  ConnectionPool.h  Manager.h  PM.idl  PacFactory.cpp  PacMan.cpp  PacMan.h  PacManFactory.cpp  Packages.cpp  Packages.h  SemVer.cpp  SemVer.h  Statement.cpp  Statement.h  factory.idl  internal.idl  man_factory.cpp  pac_factory.cpp  pch.cpp  pch.h  version.h
SFloat/: Context.h  SFloat16.cpp  pch.h  softfloat.h  state.cpp
SQLite/: Activator.h  Connection.cpp  Connection.h  Connection_impl.h  Cursor.cpp  Cursor.h  DataSource.h  Driver.cpp  Driver.h  DriverFactory.cpp  Global.cpp  Global.h  PreparedStatement.cpp  PreparedStatement.h  Statement.cpp  Statement.h  StatementBase.cpp  StatementBase.h  WritableStaticData.h  filesystem.cpp  filesystem.h  mem_methods.cpp  mem_methods.h  mutex.cpp  mutex_methods.cpp  mutex_methods.h  pch.h  sqlite_config.h
Source/: Allocators.h  Array.h  AtExit.cpp  AtExit.h  AtomicCounter.h  AtomicLink.h  AtomicPtr.h  AtomicWaitList.h  BackOff.cpp  BackOff.h  Binary.cpp  Binary.h  BinaryMap.h  BindError.cpp  BindError.h  Binder.cpp  Binder.h  Binder.inl  BinderMemory.cpp  BinderMemory.h  BinderObject.h  BitmapOps.cpp  BitmapOps.h  CMakeLists.txt  COFF.cpp  COFF.h  CharFileAdapter.h  Chrono.h  ClassLibrary.cpp  ClassLibrary.h  ConditionalCreator.h  Console.cpp  Console.h  Core.cpp  CoreAllocator.h  CoreDomains.idl  CoreInterface.h  CoreMemory.h  CoreModule.cpp  CoreModule.h  (+246 more)
Source/Legacy/: Executable.cpp  Executable.h  MemContextProcess.cpp  MemContextProcess.h  Mutex.cpp  Mutex.h  Mutex.inl  Process.cpp  Process.h  RuntimeSupportLegacy.h  Thread.cpp  Thread.h  ThreadBackground.cpp  ThreadBackground.h  ThreadBase.cpp  ThreadBase.h  ThreadLegacy.h
Source/NameService/: BindingIterator.cpp  BindingIterator.h  CMakeLists.txt  Dir.cpp  Dir.h  DirBase.cpp  DirBase.h  DirIter.cpp  DirIter.h  File.cpp  File.h  FileActivator.h  FileChar.cpp  FileChar.h  FileSystem.cpp  FileSystem.h  FileSystemRoots.h  ItemBase.h  Iterator.cpp  Iterator.h  IteratorStack.cpp  IteratorStack.h  NameService.cpp  NameService.h  NamingContextBase.cpp  NamingContextBase.h  NamingContextDefault.cpp  NamingContextDefault.h  NamingContextImpl.cpp  NamingContextImpl.h  NamingContextRoot.cpp  NamingContextRoot.h  Roots.h  StackIterator.cpp  StackIterator.h  VirtualIterator.cpp  VirtualIterator.h
Source/ORB/: BiDirPolicy.idl  BiDirPolicy_policies.h  CCM_Cookie.cpp  CMakeLists.txt  CORBA_initterm.cpp  CORBA_initterm.h  CSI.idl  CSIIOP.idl  CallbackRef.cpp  CallbackRef.h  ClientAddress.h  CodeSetConverter.cpp  CodeSetConverter.h  CoreImpl.h  CoreServant.h  Domain.cpp  Domain.h  DomainAddress.h  DomainLocal.cpp  DomainLocal.h  DomainManager.cpp  DomainManager.h  DomainProt.cpp  DomainProt.h  DomainRemote.cpp  DomainRemote.h  DomainsLocal.h  ESIOP.cpp  ESIOP.h  EventChannel.cpp  EventChannel.h  ExceptionHolder.cpp  ExceptionHolder.h  FT_policies.h  GIOP.idl  GSSUP.idl  GarbageCollector.cpp  GarbageCollector.h  HashOctetSeq.h  IIOP.idl  (+275 more)
Source/Test/: TestHeap.cpp
Source/llvm/BinaryFormat/: COFF.h
Test/: MockMemory.cpp  MockMemory.h  MockScheduler.cpp  TestAtomicPtr.cpp  TestCore.cpp  TestHeap.cpp  TestHeapDirectory.cpp  TestMemory.cpp  TestPriorityQueue.cpp  TestScheduler.cpp  TestSpinLock.cpp  main.cpp  (+2 more)
(+117 files in other folders)
